--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,8 +15,6 @@
   <li><a href="p2.html">types of Artificial Intelligence</a></li>
    <li><a href="p3.html">artificial intelligence history</a></li>
 </ul>
-<img src="history.jpg" alt="title">
-
-
+this is main page for Artificial Intelligence feed
 </body>
 </html>
