--- a/p3.html
+++ b/p3.html
@@ -1,16 +1,21 @@
+<!DOCTYPE html>
 <html>
+<head>
+	<title>Artificial Intelligence
+</title>
+</head>
 <body>
-	<h1>Artificial Intelligence</h1>
-
+	<h1>Artificial Intelligence
+</h1>
 	<h2>links</h2>
-<ul>
+	<ul>
   <li><a href="index.html">main page</a></li>
   <li><a href="p1.html">Artificial Intelligence definition</a></li>
   <li><a href="p2.html">types of Artificial Intelligence</a></li>
-   <li><a href="p3.html">artificial intelligence history</a></li>
+   <li><a href="p3.html">Artificial Intelligence history</a></li>
 </ul>
+<img src="images (5).jpeg" alt="Artificial Intelligence">
 
-<img src="history.png" alt="Artificial Intelligence">
 
 </body>
 </html>
