--- a/p3.html
+++ b/p3.html
@@ -14,7 +14,7 @@
   <li><a href="p2.html">types of Artificial Intelligence</a></li>
    <li><a href="p3.html">Artificial Intelligence history</a></li>
 </ul>
-<img src="images (5).jpeg" alt="Artificial Intelligence">
+<img src="History.png" alt="Artificial Intelligence">
 
 
 </body>
