--- a/p3.html
+++ b/p3.html
@@ -14,7 +14,7 @@
   <li><a href="p2.html">types of Artificial Intelligence</a></li>
    <li><a href="p3.html">Artificial Intelligence history</a></li>
 </ul>
-<img src="https://images.app.goo.gl/FkQQno1pb6VHCiqt6" alt="Artificial Intelligence">
+<img src="https://qbi.uq.edu.au/files/40697/The-Brain-Intelligent-Machines-AI-timeline.jpg" alt="Artificial Intelligence">
 
 
 </body>
